# claudius

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.base.md  CLAUDE.md  README.md  TASKS.md  TESTING.md  commitlint.config.js  extract_sdk_content.py  output-styles-clean.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test.json  test2.json  test3.json  tmpclaude-03e3-cwd  tmpclaude-1cfe-cwd  tmpclaude-343e-cwd  tmpclaude-6ee7-cwd  tmpclaude-bc9b-cwd  tmpclaude-eaed-cwd  tmpclaude-f79a-cwd  tmpclaude-fa7f-cwd  vitest.config.mjs
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: job-description-parser.md  job-resume-matcher.md  pr-quality-reviewer.md  pr-quick-reviewer.md
.claude/output-styles/: ycombinator-cover-letter.md
.github/workflows/: changed.yml  claude.yml  docs.yml  pre-commit.yml  release.yml  test.yml  validate-plugins.yml
brainstorm.claude/: README.md
brainstorm.claude/.claude-plugin/: plugin.json
brainstorm.claude/agents/: analysis-synthesizer.md  constraint-analyst.md  domain-explorer.md  facilitator.md  requirements-synthesizer.md  specification-writer.md  technical-analyst.md
brainstorm.claude/commands/: continue.md  export.md  start.md
brainstorm.claude/templates/: requirements-document.md  (+1 more)
cc/: README.md
config/: base.markdownlint-cli2.yaml  claude.markdownlint-cli2.yaml  other.markdownlint-cli2.yaml  readme.markdownlint-cli2.yaml
curation/: README.md
doc-understanding.claude/: README.md
docs/: index.md
dotclaude/: CLAUDE.md  settings.json
generator-prompts/: agent-generator.md  command-generator.md  create-guidelines.md  create-mapping.md  file-comparer.md  output-style-generator.md  prompt-comparer.md  prompt-splitter.md  python-agent-generator.md  workflow-generation.md  ycombinator-cover-letter.md
gitx/: README.md
job-hunting.claude/: README.md
planner.claude/: README.md
scripts/: generate-docs.mjs  validate-plugins.mjs
tests/: __init__.py  conftest.py  generate-docs.test.mjs  validate-plugins.test.mjs
(+520 files in other folders)
